--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/core": "^17.0.0",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.0.0",
+    "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
     "rxjs": "^7.8.0"
   },
@@ -17,9 +18,9 @@
     "@angular/compiler-cli": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
-    "typescript": "^5.2.0",
+    "@types/jest": "^29.5.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.0",
-    "@types/jest": "^29.5.0"
+    "typescript": "^5.2.0"
   }
 }
