--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@angular/animations": "^17.3.12",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
+    "@types/jasmine": "^5.1.13",
     "@types/jest": "^29.5.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.0",
